# HKU-2425FYP-RobotHelper

./: .gitignore  .gitmodules  README.md  ReadME.md  bashrc_scripts.sh
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: GraspQuery.msg  GraspResponse.msg
custom_msgs/srv/: SemanticQuery.srv
grasp/: README.md
grasp/anygrasp/: .TimeRecord  DepthCamera_2025-02-19-16-52-42.json  DepthCamera_2025-02-19-16-52-53.json  generate_grasp_pose.py  package.xml  process_image.py  setup.cfg  setup.py
grasp/anygrasp/anygrasp/: anygrasp_node.py  grasp_responder.py
grasp/anygrasp/assets/: .TimeRecord
grasp/anygrasp_test/: .TimeRecord  best_grasp_pose.yaml  generate_grasp_pose.py  generate_grasp_pose.sh  output_point_cloud.pcd
grasp/gdino_sam/: package.xml  setup.cfg  setup.py
grasp/grasp_execute/: package.xml  setup.cfg  setup.py
grasp/grasp_execution/: package.xml  setup.py
grasp/robotic_arm/: package.xml  setup.py
grasp/test_scripts/: MinkowskiEngineTest.py  client_local_test.py  server_test.py
livox_to_laserscan/: CMakeLists.txt
livox_to_laserscan/src/: custom_tf_pub.cpp  livox_to_laserscan.cpp
navigation/: README.md  ReadME.md  setup.py
navigation/livox_to_laserscan/: CMakeLists.txt  package.xml
navigation/nav_control_hub/: package.xml  setup.cfg  setup.py
navigation/navigation/: serial_task.py
navigation/serial_task/: package.xml  setup.cfg  setup.py
semantic_map/: query_command  setup.py
semantic_map/config/: config_gdino_query_sender.yaml  config_image_transform_listener.yaml  config_query_semantic_map.yaml
semantic_map/semantic_map/: gdino_query_sender.py  image_socket_recv.py  image_socket_send.py  image_socket_send_test.py  image_transform_listener.py  listen_print_tf.py  params.py  query_client.py  query_point_processor.py  query_semantic_map.py  utils.py
src/grasp/: package.xml  setup.py
src/navigation/: package.xml
src/semantic_map/: package.xml  setup.py
src/translator/: setup.py
translator/: README.md  ReadME.md  package.xml  setup.cfg  setup.py
translator/launch/: translator.launch.py
translator/translator/: LMP.py  master.py  query.py  socket_client.py  socket_server.py  utils.py
(+60 files in other folders)
